# HELIX

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.devin/: config.local.json
config/: default.toml
crates/helix-bench/: Cargo.toml
crates/helix-bench/src/: lib.rs
crates/helix-cli/: Cargo.toml
crates/helix-cli/src/: main.rs
crates/helix-core/: Cargo.toml
crates/helix-core/src/: arena.rs  buffer.rs  dtype.rs  error.rs  lib.rs  shape.rs  tensor.rs
crates/helix-core/src/ops/: activation.rs  attention.rs  matmul.rs  mod.rs  norm.rs
crates/helix-loader/: Cargo.toml
crates/helix-loader/src/: lib.rs
crates/helix-model/: Cargo.toml
crates/helix-model/src/: attention.rs  block.rs  config.rs  embedding.rs  gpt2.rs  layer_norm.rs  lib.rs  mlp.rs
crates/helix-profile/: Cargo.toml
crates/helix-profile/src/: lib.rs
crates/helix-runtime/: Cargo.toml
crates/helix-runtime/src/: lib.rs
crates/helix-sampler/: Cargo.toml
crates/helix-sampler/src/: lib.rs
crates/helix-server/: Cargo.toml
crates/helix-server/src/: lib.rs
crates/helix-tokenizer/: Cargo.toml
crates/helix-tokenizer/src/: bpe.rs  error.rs  lib.rs  pretokenize.rs  special.rs  vocab.rs
proto/: helix.proto
