[workspace]
resolver = "2"
members = [
    "crates/helix-core",
    "crates/helix-tokenizer",
    "crates/helix-model",
    "crates/helix-loader",
    "crates/helix-runtime",
    "crates/helix-sampler",
    "crates/helix-server",
    "crates/helix-bench",
    "crates/helix-profile",
    "crates/helix-cli",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Your Name <you@example.com>"]
license     = "MIT"
repository  = "https://github.com/yourname/helix"

[workspace.dependencies]
# error handling
thiserror   = "1"
anyhow      = "1"

# serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
toml        = "1"

# async
tokio       = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# networking
tonic       = "0.11"
tonic-build = "0.11"
axum        = "0.7"
tower       = "0.4"
tower-http  = { version = "0.5", features = ["cors", "trace"] }
prost       = "0.12"

# logging / tracing
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter", "json"] }

# CLI
clap        = { version = "4", features = ["derive", "color"] }
owo-colors  = "4"
indicatif   = "0.17"

# math / numeric
bytemuck    = { version = "1", features = ["derive"] }
half        = { version = "2", features = ["bytemuck"] }

# random
rand        = "0.8"
rand_chacha = "0.3"

# regex (for tokenizer)
regex       = "1"
fancy-regex = "0.13"

# memory map
memmap2     = "0.9"

# zip (for npz)
zip         = "2"

# benchmarking
criterion   = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level   = 3
lto         = "fat"
codegen-units = 1
panic       = "abort"
strip       = "debuginfo"

[profile.bench]
inherits    = "release"
debug       = true
