[package]
name = "helix-profile"
version.workspace = true
edition.workspace = true

[dependencies]
helix-core = { path = "../helix-core" }
helix-runtime = { path = "../helix-runtime" }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde.workspace = true

[dev-dependencies]
criterion.workspace = true
