[package]
name = "helix-sampler"
version.workspace = true
edition.workspace = true

[dependencies]
helix-core = { path = "../helix-core" }
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
rand.workspace = true
rand_chacha.workspace = true

[dev-dependencies]
criterion.workspace = true
